--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,15 +9,49 @@
   background-color: #ffffff;
 }
 .header__logo {
+  width: 38px;
+  height: 38px;
+}
+.header__logo {
+  opacity: 0.7;
 }
 .header__nav {
+  display: flex;
+  align-items: center;
 }
-.header__button {
-  font-family: 'Suisse Intl';
+.header__link {
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 17px;
+  line-height: 18px;
+  border: none;
+  background: none;
+  margin-right: 20px;
+  text-decoration: none;
+  color: #000000;
+  text-align: center;
+}
+.header__link:hover {
+  opacity: 0.7;
+}
+.header__link_active {
+  border-bottom: 2px solid #000000;
+  font-weight: 500;
+  transition: all 0.1s ease;
 }
 .header__box {
+  display: flex;
+  align-items: center;
+  margin-left: 30px;
+}
+.header__account-icon {
+  width: 30px;
+  height: 30px;
+  margin-left: 13px;
+  border-radius: 50%;
+  background-image: url(../../images/icon__COLOR_icon-main.svg);
+  background-color: rgba(245, 245, 245, 1);
+  background-repeat: no-repeat;
+  background-position: center;
 }
