--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,11 +8,14 @@
   position: relative;
   background-color: #ffffff;
 }
+.header_logout {
+  background-color: #073042;
+}
 .header__logo {
   width: 38px;
   height: 38px;
 }
-.header__logo {
+.header__logo:hover {
   opacity: 0.7;
 }
 .header__nav {
@@ -22,7 +25,7 @@
 .header__link {
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 14px;
   line-height: 18px;
   border: none;
@@ -39,6 +42,14 @@
   border-bottom: 2px solid #000000;
   font-weight: 500;
   transition: all 0.1s ease;
+}
+.header__link_signup {
+  color: #ffffff;
+}
+.header__link_signin {
+  padding: 8px 20px;
+  background-color: #2be080;
+  border-radius: 3px;
 }
 .header__box {
   display: flex;
