--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -30,13 +30,15 @@
   line-height: 18px;
   border: none;
   background: none;
-  margin-right: 20px;
   text-decoration: none;
   color: #000000;
   text-align: center;
 }
 .header__link:hover {
   opacity: 0.7;
+}
+.header__link:not(:last-child) {
+  margin-right: 20px;
 }
 .header__link_active {
   border-bottom: 2px solid #000000;
