--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -4,7 +4,7 @@
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 524px;
+  padding: 184px 0 224px;
   display: flex;
   justify-content: center;
   align-items: center;
