--- a/src/components/Tech/Tech.css
+++ b/src/components/Tech/Tech.css
@@ -4,14 +4,11 @@
   text-decoration: none;
   width: 90px;
   height: 60px;
-  display: inline-block;
+  display: block;
   position: relative;
 }
 .tech:hover {
   opacity: 0.7;
-}
-.tech:not(:last-child) {
-  margin-right: 10px;
 }
 .tech__text {
   font-family: Inter;
