--- a/src/components/Tech/Tech.css
+++ b/src/components/Tech/Tech.css
@@ -1,13 +1,16 @@
 .tech {
+  list-style: none;
+}
+.tech:hover {
+  opacity: 0.7;
+}
+.tech__link {
   background-color: #e8e8e8;
   border-radius: 10px;
   width: 90px;
   height: 60px;
   display: block;
   position: relative;
-}
-.tech:hover {
-  opacity: 0.7;
 }
 .tech__text {
   font-family: Inter;
