--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,6 +15,7 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
+  scroll-behavior: smooth;
 }
 
 .App * {
