--- a/src/components/Tech/Tech.css
+++ b/src/components/Tech/Tech.css
@@ -1,9 +1,6 @@
 .tech {
   list-style: none;
 }
-.tech:hover {
-  opacity: 0.7;
-}
 .tech__link {
   background-color: #e8e8e8;
   border-radius: 10px;
@@ -11,6 +8,9 @@
   height: 60px;
   display: block;
   position: relative;
+}
+.tech__link:hover {
+  background-color: #2be080;
 }
 .tech__text {
   font-family: Inter;
