--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import url(./vendor/normalize.css);
 @import url(./vendor/fonts/inter.css);
 
+html {
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
