--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -49,6 +49,12 @@
   align-items: center;
   max-width: 150px;
 }
+.student__link:hover {
+  opacity: 0.7;
+}
+.student__link:hover > .student__list-text {
+  color: #2be080;
+}
 .student__photo {
   height: 327px;
   width: 270px;
