--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   max-width: 1280px;
-  padding: 0 70px 20px;
+  padding: 79px 70px 20px;
 }
 .footer__title {
   font-family: Inter;
