add serarch form input

--- a/src/components/Tech/Tech.css
+++ b/src/components/Tech/Tech.css
@@ -2,7 +2,7 @@
   list-style: none;
 }
 .tech__link {
-  background-color: #e8e8e8;
+  background-color: rgba(232, 232, 232, 1);
   border-radius: 10px;
   width: 90px;
   height: 60px;
