--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,12 +9,12 @@
   font-weight: 400;
   line-height: 16px;
   text-align: center;
-  color: #a0a0a0;
+  color: rgba(160, 160, 160, 1);
   margin-bottom: 20px;
 }
 .footer__container {
   width: 100%;
-  border-top: 1px solid #e8e8e8;
+  border-top: 1px solid rgba(232, 232, 232, 1);
   font-family: Inter;
   font-size: 13px;
   font-weight: 400;
