--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -6,7 +6,7 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 20px;
-  color: #a0a0a0;
+  color: rgba(160, 160, 160, 1);
   margin-bottom: 50px;
 }
 .portfolio__list {
