--- a/src/components/ProjectLink/ProjectLink.css
+++ b/src/components/ProjectLink/ProjectLink.css
@@ -24,7 +24,7 @@
 }
 .portfolio__list-link {
   display: inline-flex;
-  border-bottom: 1px solid #e8e8e8;
+  border-bottom: 1px solid rgba(232, 232, 232, 1);
   padding-bottom: 20px;
   text-align: end;
   width: 100%;
