--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -10,6 +10,7 @@
     'button button';
 }
 .movies-card__title {
+  max-width: 240px;
   font-family: Inter;
   font-size: 15px;
   font-weight: 500;
