--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,4 +1,26 @@
 .movies {
   width: 100%;
   max-width: 1280px;
+  display: flex;
+  flex-direction: column;
+}
+.movie__button {
+  margin: 50px auto 80px;
+  padding: 11px 60px 9px;
+  height: 36px;
+  width: 320px;
+  text-align: center;
+  font-family: Inter;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 15px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 1);
+  border: 1px solid rgba(232, 232, 232, 1);
+  border-radius: 5px;
+  cursor: pointer;
+}
+.movie__button:hover {
+  scale: 1.1;
+  opacity: 0.7;
 }
