--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -5,7 +5,7 @@
   flex-direction: column;
 }
 .movie__button {
-  margin: 50px auto 80px;
+  margin: 50px auto 0;
   padding: 11px 60px 9px;
   height: 36px;
   width: 320px;
