--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -26,15 +26,7 @@
   color: rgba(160, 160, 160, 1);
   display: flex;
   flex-direction: column;
-}
-.register__label: no {
-  font-family: Inter;
-  font-size: 10px;
-  font-weight: 400;
-  line-height: 12px;
-  color: rgba(160, 160, 160, 1);
-  display: flex;
-  flex-direction: column;
+  margin-bottom: 8px;
 }
 .register__input {
   font-family: Inter;
@@ -47,14 +39,46 @@
   outline: none;
   padding: 5px 0 10px;
 }
+.register__input:focus {
+  border-bottom: 1px solid rgba(52, 86, 243, 1);
+}
 .register__button-submit {
   border: none;
   background-color: rgba(52, 86, 243, 1);
   cursor: pointer;
   width: 396px;
   padding: 13px 0 15px;
+  margin: 118px 0 16px;
+  color: rgba(255, 255, 255, 1);
+  border-radius: 3px;
 }
 .register__text {
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  text-align: center;
+  color: rgba(160, 160, 160, 1);
 }
 .register__link {
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  text-align: center;
+  color: rgba(52, 86, 243, 1);
+  margin-left: 6px;
+  text-decoration: none;
+}
+.register__input-error {
+  font-family: Inter;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 12px;
+  text-align: left;
+  color: rgba(255, 48, 85, 1);
+  /* opacity: 0; */
+  min-height: 16px;
+  font-family: Inter, Arial, sans-serif;
+  transition: 0.3s;
 }
