--- a/src/components/Tech/Tech.css
+++ b/src/components/Tech/Tech.css
@@ -12,6 +12,9 @@
 .tech__link:hover {
   background-color: #2be080;
 }
+.tech__link:hover > .tech__text {
+  color: rgba(255, 255, 255, 1);
+}
 .tech__text {
   font-family: Inter;
   font-size: 14px;
