--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -31,6 +31,7 @@
   line-height: 22px;
   letter-spacing: 0px;
   text-align: left;
+  padding-right: 49px;
 }
 .student__list {
   margin-top: 45px;
@@ -66,4 +67,33 @@
   font-weight: 500;
   line-height: 17px;
   color: #000000;
+}
+@media screen and (max-width: 768px) {
+  .student {
+    padding: 90px 50px;
+  }
+  .student__title {
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 16px;
+  }
+  .student__profession {
+    font-size: 12px;
+    line-height: 18px;
+    margin-bottom: 20px;
+  }
+  .student__bio {
+    font-size: 12px;
+    line-height: 18px;
+  }
+  .student__photo {
+    height: 307px;
+    width: 255px;
+    border-radius: 10px;
+  }
+  .student__list {
+    margin-top: 38px;
+  }
+}
+@media screen and (max-width: 600px) {
 }
