--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -66,3 +66,14 @@
   opacity: 0.7;
   scale: 1.1;
 }
+
+@media screen and (max-width: 896px) {
+  .movies-card {
+    max-width: 342px;
+  }
+  .movies-card__img {
+    width: 342px;
+  }
+}
+@media screen and (max-width: 600px) {
+}
