--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -4,7 +4,6 @@
   margin: auto;
   display: flex;
   flex-direction: column;
-  /* align-items: left; */
   width: 396px;
 }
 .register__title {
@@ -48,9 +47,13 @@
   cursor: pointer;
   width: 396px;
   padding: 13px 0 15px;
-  margin: 118px 0 16px;
+  margin: 134px 0 16px;
   color: rgba(255, 255, 255, 1);
   border-radius: 3px;
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
 }
 .register__text {
   font-family: Inter;
