--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -30,3 +30,11 @@
 .search-form__button-submit:hover {
   opacity: 0.7;
 }
+
+@media screen and (max-width: 768px) {
+  .search-form {
+    padding: 80px 30px 61px;
+  }
+}
+@media screen and (max-width: 600px) {
+}
