--- a/src/components/Tech/Tech.css
+++ b/src/components/Tech/Tech.css
@@ -29,3 +29,11 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+@media screen and (max-width: 768px) {
+  .tech__text {
+    font-size: 12px;
+    line-height: 15px;
+  }
+}
+@media screen and (max-width: 600px) {
+}
