add adaptive for max-width 425px

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -42,7 +42,6 @@
 }
 .header__link_active {
   border-bottom: 2px solid #000000;
-  font-weight: 500;
   transition: all 0.1s ease;
 }
 .header__link_signup {
@@ -77,8 +76,15 @@
     margin-right: 30px;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 425px) {
   .header {
-    padding: 18px 30px;
+    padding: 18px 14px;
+  }
+  .header__link {
+    font-size: 10px;
+    line-height: 16px;
+  }
+  .header__link:not(:last-child) {
+    margin-right: 14px;
   }
 }
