--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -4,6 +4,7 @@
 .search-form__conntainer {
   display: flex;
   border-bottom: 1px solid rgba(232, 232, 232, 1);
+  font-size: 0;
 }
 .search-form__input {
   font-family: Inter;
@@ -11,30 +12,47 @@
   font-weight: 500;
   line-height: 34px;
   color: rgba(160, 160, 160, 1);
-  width: 100%;
   border: none;
   padding-bottom: 13px;
   outline: none;
+  width: calc(100% - 34px);
+}
+.search-form__conntainer:has(.search-form__input:focus) {
+  border-bottom: 1px solid rgba(52, 86, 243, 1);
 }
 .search-form__button-submit {
   background-image: url('../../images/search-form-icon.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-color: rgba(52, 86, 243, 1);
+  width: 100%;
   border-radius: 50%;
   border: none;
   width: 34px;
   height: 34px;
   cursor: pointer;
+  position: relative;
 }
+
 .search-form__button-submit:hover {
   opacity: 0.7;
 }
 
 @media screen and (max-width: 768px) {
   .search-form {
-    padding: 80px 30px 61px;
+    padding: 80px 30px 60px;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 425px) {
+  .search-form {
+    padding: 90px 14px 50px;
+  }
+  .search-form__input {
+    font-size: 18px;
+    line-height: 22px;
+    padding-bottom: 15px;
+  }
+  .search-form__button-submit {
+    margin-bottom: 9px;
+  }
 }
