--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -54,7 +54,7 @@
   opacity: 0.7;
 }
 .student__link:hover > .student__list-text {
-  color: #2be080;
+  color: rgba(43, 224, 128, 1);
 }
 .student__photo {
   height: 327px;
@@ -66,7 +66,7 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 17px;
-  color: #000000;
+  color: rgba(0, 0, 0, 1);
 }
 @media screen and (max-width: 768px) {
   .student {
@@ -95,5 +95,42 @@
     margin-top: 38px;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 640px) {
+  .student__info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 60px;
+  }
+  .student__photo {
+    width: 292px;
+    height: 352px;
+    order: -1;
+    margin-bottom: 40px;
+  }
+  .student__bio {
+    padding-right: 0px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .student {
+    padding: 70px 14px;
+  }
+  .student__title {
+    font-size: 30px;
+    line-height: 36px;
+    margin-bottom: 20px;
+    font-family: Inter;
+  }
+  .student__profession {
+    font-size: 11px;
+    line-height: 16px;
+  }
+  .student__bio {
+    font-size: 11px;
+    line-height: 16px;
+  }
+  .student__list {
+    margin-top: 40px;
+  }
 }
