--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -44,10 +44,10 @@
   font-weight: 400;
   line-height: 17px;
   padding: 9px 14px;
-  background-color: #f2f2f2;
+  background-color: rgba(242, 242, 242, 1);
 }
 .about__progress-time_green {
-  background-color: #2be080;
+  background-color: rgba(43, 224, 128, 1);
 }
 .about__progress-text {
   font-family: Inter;
@@ -70,5 +70,39 @@
     padding-top: 93px;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 550px) {
+  .about__progress-container:first-child {
+    flex: 1;
+  }
+  .about__progress-container:last-child {
+    flex: 2;
+  }
+}
+@media screen and (max-width: 425px) {
+  .about {
+    padding: 70px 18px;
+  }
+  .about__container {
+    display: flex;
+    flex-direction: column;
+    padding-top: 0;
+  }
+  .about__title {
+    font-size: 18px;
+    line-height: 22px;
+    padding-top: 60px;
+  }
+  .about__text {
+    font-size: 11px;
+    line-height: 16px;
+    margin-top: 16px;
+  }
+  .about__progress-time {
+    font-size: 11px;
+    line-height: 13px;
+  }
+  .about__progress-text {
+    font-size: 11px;
+    line-height: 13px;
+  }
 }
