--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -71,5 +71,13 @@
     justify-content: flex-end;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 425px) {
+  .search-form__block {
+    margin-top: 40px;
+    justify-content: center;
+  }
+  .seacrh-form__label {
+    font-size: 11px;
+    line-height: 18px;
+  }
 }
