--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -25,6 +25,9 @@
 }
 .footer__author {
   font-family: Inter;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 16px;
 }
 .footer__list {
   list-style: none;
@@ -40,4 +43,43 @@
 }
 .footer__list-link:hover {
   opacity: 0.7;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    padding: 79px 30px 20px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .footer {
+    padding: 79px 10px 20px;
+    display: flex;
+    flex-direction: column;
+  }
+  .footer__title {
+    font-size: 12px;
+    line-height: 15px;
+  }
+  .footer__container {
+    flex-direction: column;
+    align-items: center;
+    font-size: 12px;
+    line-height: 15px;
+    padding-top: 30px;
+  }
+  .footer__list {
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 30px;
+  }
+  .footer__list-item:not(:last-child) {
+    margin-right: 0px;
+    margin-bottom: 12px;
+  }
+  .footer__author {
+    font-size: 12px;
+    line-height: 15px;
+    order: 1;
+    color: rgba(160, 160, 160, 1);
+  }
 }
