--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -24,3 +24,10 @@
   scale: 1.1;
   opacity: 0.7;
 }
+
+@media screen and (max-width: 425px) {
+  .movie__button {
+    padding: 11px 20px 9px;
+    width: 240px;
+  }
+}
