--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -13,8 +13,10 @@
     grid-template-columns: repeat(auto-fit, minmax(342px, 1fr));
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 425px) {
   .movies__card-list {
-    grid-column-gap: 16px;
+    padding: 40px 10px 30px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-row-gap: 16px;
   }
 }
