--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -1,22 +1,38 @@
 .nav {
   height: 66px;
-  background-color: #000000;
+  background-color: rgba(0, 0, 0, 1);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .nav__link {
-  text-decoration: none;
-  color: #ffffff;
+  text-decoration-line: none;
+  color: rgba(255, 255, 255, 1);
   font-family: Inter;
   font-size: 13px;
   font-weight: 500;
   line-height: 16px;
-  border-bottom: 2px solid #ffffff;
+  border-bottom: 1px solid rgba(255, 255, 255, 1);
 }
 .nav__link:not(:last-child) {
   margin-right: 40px;
 }
 .nav__link:hover {
   opacity: 0.7;
+}
+
+@media screen and (max-width: 425px) {
+  .nav__link {
+    font-size: 11px;
+    line-height: 16px;
+  }
+  .nav__link:not(:last-child) {
+    margin-right: 32px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .nav__link:not(:last-child) {
+    margin-right: 24px;
+  }
 }
