--- a/src/components/ProjectLink/ProjectLink.css
+++ b/src/components/ProjectLink/ProjectLink.css
@@ -34,12 +34,12 @@
   font-weight: 400;
   line-height: 50px;
   letter-spacing: -0.04em;
-  color: #000000;
+  color: rgba(0, 0, 0, 1);
 }
 .portfolio__list-link:hover {
   opacity: 0.7;
-  color: #2be080;
-  border-bottom: 1px solid #2be080;
+  color: rgba(43, 224, 128, 1);
+  border-bottom: 1px solid rgba(43, 224, 128, 1);
 }
 .portfolio__list-link:hover::after {
   background-image: url('../../images/arrow__project-link_green.svg');
@@ -49,6 +49,18 @@
     font-size: 28px;
     padding-bottom: 19px;
   }
+  .portfolio__list-link::after {
+    width: 18px;
+    height: 18px;
+  }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 425px) {
+  .portfolio__list-link {
+    font-size: 18px;
+    line-height: 28px;
+  }
+  .portfolio__list-link::after {
+    width: 14px;
+    height: 14px;
+  }
 }
