--- a/src/components/SectionTitle/SectionTitle.css
+++ b/src/components/SectionTitle/SectionTitle.css
@@ -9,3 +9,11 @@
   padding-bottom: 23px;
   width: 100%;
 }
+
+@media screen and (max-width: 425px) {
+  .section-title {
+    font-size: 18px;
+    line-height: 22px;
+    padding-bottom: 28px;
+  }
+}
