--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -31,6 +31,7 @@
   display: grid;
   gap: 10px;
   grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
+  justify-items: center;
 }
 
 @media screen and (max-width: 830px) {
@@ -45,5 +46,20 @@
     grid-template-columns: repeat(auto-fit, minmax(84px, 1fr));
   }
 }
-@media screen and (max-width: 600px) {
+
+@media screen and (max-width: 425px) {
+  .techs {
+    padding: 70px 18px;
+  }
+  .techs__title {
+    font-size: 30px;
+    line-height: 36px;
+  }
+  .tects__text {
+    font-size: 11px;
+    line-height: 16px;
+  }
+  .techs__container {
+    padding: 0 47px 0;
+  }
 }
