--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -29,7 +29,7 @@
 }
 .header__link_signin {
   padding: 8px 20px;
-  background-color: #2be080;
+  background-color: rgba(43, 224, 128, 1);
   border-radius: 3px;
 }
 .header__link_enter:first-child {
