--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -77,7 +77,7 @@
 }
 
 .preloader__round::after {
-  background: white;
+  background: rgba(255, 255, 255, 1);
   animation: preloader-inside-white 1s ease-in-out infinite;
 }
 
