--- a/src/components/SectionTitle/SectionTitle.css
+++ b/src/components/SectionTitle/SectionTitle.css
@@ -5,7 +5,7 @@
   line-height: 27px;
   letter-spacing: -0.04em;
   text-align: left;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid rgba(0, 0, 0, 1);
   padding-bottom: 23px;
   width: 100%;
 }
