--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -1,5 +1,5 @@
 .techs {
-  background-color: #f5f5f5;
+  background-color: rgba(245, 245, 245, 1);
   padding: 100px 70px;
   display: flex;
   flex-direction: column;
