--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -1,7 +1,7 @@
 .search-form__block {
   margin-top: 32px;
 }
-.seacrh-form__label {
+.search-form__label {
   padding-left: 50px;
   font-family: Inter;
   font-size: 13px;
@@ -14,7 +14,7 @@
   -moz-appearance: none;
   appearance: none;
 }
-.searh-from__box {
+.search-form__box {
   margin-left: -50px;
   position: absolute;
   width: 36px;
@@ -24,10 +24,10 @@
   cursor: pointer;
   transition: all 0.5s linear;
 }
-.searh-from__box:hover {
+.search-form__box:hover {
   filter: brightness(1.2);
 }
-.searh-from__box::before {
+.search-form__box::before {
   content: '';
   position: absolute;
   top: 2px;
@@ -41,13 +41,13 @@
 
 /* Cheked */
 
-.search-form__checkbox:checked + .searh-from__box {
+.search-form__checkbox:checked + .search-form__box {
   background-color: rgba(43, 224, 128, 1);
 }
-.search-form__checkbox:checked + .searh-from__box:hover {
+.search-form__checkbox:checked + .search-form__box:hover {
   filter: brightness(0.9);
 }
-.search-form__checkbox:checked + .searh-from__box::before {
+.search-form__checkbox:checked + .search-form__box::before {
   background-color: rgba(255, 255, 255, 1);
   left: 18px;
   transition: left 0.3s linear;
@@ -55,11 +55,11 @@
 
 /* Focused */
 
-.search-form__checkbox:focus-visible + .searh-from__box {
+.search-form__checkbox:focus-visible + .search-form__box {
   box-shadow: 0 0 0 2px rgba(43, 224, 128, 1), 0 0 0 2px rgba(43, 224, 128, 1);
   transition: box-shadow 0s;
 }
-.search-form__checkbox:checked:focus-visible + .searh-from__box {
+.search-form__checkbox:checked:focus-visible + .search-form__box {
   box-shadow: 0 0 0 2px rgba(0, 0, 0, 1), 0 0 0 2px rgba(0, 0, 0, 1);
   transition: box-shadow 0s;
 }
@@ -76,7 +76,7 @@
     margin-top: 40px;
     justify-content: center;
   }
-  .seacrh-form__label {
+  .search-form__label {
     font-size: 11px;
     line-height: 18px;
   }
