--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
 }
-.movie__button {
+.movies__button {
   margin: 50px auto 80px;
   padding: 11px 60px 9px;
   height: 36px;
@@ -20,13 +20,13 @@
   border-radius: 5px;
   cursor: pointer;
 }
-.movie__button:hover {
+.movies__button:hover {
   scale: 1.1;
   opacity: 0.7;
 }
 
 @media screen and (max-width: 425px) {
-  .movie__button {
+  .movies__button {
     padding: 11px 20px 9px;
     width: 240px;
   }
