--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,4 +1,4 @@
-.movies__card-list {
+.movies-card-list {
   padding: 70px 70px 50px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
@@ -7,14 +7,14 @@
 }
 
 @media screen and (max-width: 896px) {
-  .movies__card-list {
+  .movies-card-list {
     padding: 70px 30px 30px;
     gap: 35px 24px;
     grid-template-columns: repeat(auto-fit, minmax(342px, 1fr));
   }
 }
 @media screen and (max-width: 425px) {
-  .movies__card-list {
+  .movies-card-list {
     padding: 40px 10px 30px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-row-gap: 16px;
