--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,8 +8,16 @@
   position: relative;
   background-color: rgba(255, 255, 255, 1);
 }
-.header_logout {
+.header_theme_dark {
   background-color: rgba(7, 48, 66, 1);
+}
+.header_theme_dark .header__nav .header__link {
+  color: rgba(255, 255, 255, 1);
+}
+.header_theme_light {
+  background-color: rgba(255, 255, 255, 1);
+}
+.header_logout {
 }
 .header__label {
   justify-content: center;
