--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -10,7 +10,7 @@
   height: 36px;
   width: 320px;
   text-align: center;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 12px;
   font-weight: 500;
   line-height: 15px;
