--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -10,7 +10,7 @@
   max-width: 600px;
 }
 .student__title {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 50px;
   font-weight: 400;
   line-height: 58px;
@@ -18,14 +18,14 @@
   margin-bottom: 18px;
 }
 .student__profession {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 18px;
   font-weight: 500;
   line-height: 20px;
   margin-bottom: 26px;
 }
 .student__bio {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 22px;
@@ -62,7 +62,7 @@
   border-radius: 10px;
 }
 .student__list-text {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 500;
   line-height: 17px;
@@ -120,7 +120,7 @@
     font-size: 30px;
     line-height: 36px;
     margin-bottom: 20px;
-    font-family: Inter;
+    font-family: 'Inter', Arial, sans-serif;
   }
   .student__profession {
     font-size: 11px;
