--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -10,14 +10,14 @@
   padding-right: 30px;
 }
 .about__title {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 20px;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: -0.04em;
 }
 .about__text {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
@@ -39,7 +39,7 @@
   flex: 4;
 }
 .about__progress-time {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
@@ -50,7 +50,7 @@
   background-color: rgba(43, 224, 128, 1);
 }
 .about__progress-text {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 500;
   line-height: 17px;
