--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -11,7 +11,7 @@
 }
 
 .error__status {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 140px;
   font-weight: 400;
   line-height: 169px;
@@ -19,7 +19,7 @@
 
 .error__message {
   padding: 5px 0 174px;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 19px;
@@ -28,7 +28,7 @@
 
 .error__link {
   padding: 5px;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
