--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
   padding: 79px 70px 20px;
 }
 .footer__title {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 13px;
   font-weight: 400;
   line-height: 16px;
@@ -15,7 +15,7 @@
 .footer__container {
   width: 100%;
   border-top: 1px solid rgba(232, 232, 232, 1);
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 13px;
   font-weight: 400;
   line-height: 16px;
@@ -24,7 +24,7 @@
   padding-top: 20px;
 }
 .footer__author {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 13px;
   font-weight: 400;
   line-height: 16px;
