--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -8,7 +8,7 @@
 }
 .login__title {
   margin: 40px 0;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 24px;
   font-weight: 500;
   line-height: 29px;
@@ -18,7 +18,7 @@
   flex-direction: column;
 }
 .login__label {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 10px;
   font-weight: 400;
   line-height: 12px;
@@ -28,7 +28,7 @@
   margin-bottom: 8px;
 }
 .login__input {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
@@ -52,7 +52,7 @@
   border-radius: 3px;
 }
 .login__text {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
@@ -60,7 +60,7 @@
   color: rgba(160, 160, 160, 1);
 }
 .login__link {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
@@ -70,7 +70,7 @@
   text-decoration: none;
 }
 .login__input-error {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 10px;
   font-weight: 400;
   line-height: 12px;
@@ -78,7 +78,6 @@
   color: rgba(255, 48, 85, 1);
   opacity: 0;
   min-height: 16px;
-  font-family: Inter, Arial, sans-serif;
   transition: 0.3s;
 }
 @media screen and (max-width: 425px) {
