--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -11,7 +11,7 @@
 }
 .movies-card__title {
   max-width: 240px;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 15px;
   font-weight: 500;
   line-height: 18px;
@@ -20,7 +20,7 @@
   padding: 18px 4px 18px 18px;
 }
 .movies-card__time {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 13px;
   font-weight: 400;
   line-height: 18px;
@@ -39,7 +39,7 @@
   grid-area: button;
   width: 100px;
   height: 29px;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 12px;
   font-weight: 400;
   line-height: 11px;
