--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -2,7 +2,7 @@
   padding: 0 70px 125px;
 }
 .portfolio__title {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 20px;
