--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -7,7 +7,7 @@
   align-items: center;
 }
 .profile__title {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 24px;
   font-weight: 500;
   line-height: 29px;
@@ -19,7 +19,7 @@
   width: 410px;
 }
 .profile__label {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 11px;
   font-weight: 500;
   line-height: 13px;
@@ -33,7 +33,7 @@
 }
 .profile__input {
   width: 100%;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 11px;
   font-weight: 400;
   line-height: 13px;
@@ -48,7 +48,7 @@
   border: none;
   background-color: rgba(255, 255, 255, 1);
   cursor: pointer;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 13px;
   font-weight: 400;
   line-height: 16px;
@@ -65,7 +65,7 @@
   color: rgba(255, 48, 85, 1);
 }
 .profile__input-error {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 10px;
   font-weight: 400;
   line-height: 12px;
@@ -73,7 +73,6 @@
   color: rgba(255, 48, 85, 1);
   opacity: 0;
   min-height: 16px;
-  font-family: Inter, Arial, sans-serif;
   transition: 0.3s;
 }
 @media screen and (max-width: 768px) {
