--- a/src/components/ProjectLink/ProjectLink.css
+++ b/src/components/ProjectLink/ProjectLink.css
@@ -28,7 +28,7 @@
   padding-bottom: 20px;
   width: 100%;
   text-decoration: none;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 30px;
   font-weight: 400;
   line-height: 50px;
