--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -11,7 +11,7 @@
 }
 .promo__title {
   text-align: center;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 50px;
   font-weight: 400;
   line-height: 58px;
