--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -8,7 +8,7 @@
 }
 .register__title {
   margin: 40px 0;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 24px;
   font-weight: 500;
   line-height: 29px;
@@ -18,7 +18,7 @@
   flex-direction: column;
 }
 .register__label {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 10px;
   font-weight: 400;
   line-height: 12px;
@@ -28,7 +28,7 @@
   margin-bottom: 8px;
 }
 .register__input {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
@@ -50,13 +50,13 @@
   margin: 134px 0 16px;
   color: rgba(255, 255, 255, 1);
   border-radius: 3px;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 500;
   line-height: 17px;
 }
 .register__text {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
@@ -64,7 +64,7 @@
   color: rgba(160, 160, 160, 1);
 }
 .register__link {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
@@ -74,7 +74,7 @@
   text-decoration: none;
 }
 .register__input-error {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 10px;
   font-weight: 400;
   line-height: 12px;
@@ -82,7 +82,6 @@
   color: rgba(255, 48, 85, 1);
   /* opacity: 0; */
   min-height: 16px;
-  font-family: Inter, Arial, sans-serif;
   transition: 0.3s;
 }
 
