--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -7,7 +7,7 @@
   font-size: 0;
 }
 .search-form__input {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 28px;
   font-weight: 500;
   line-height: 34px;
