--- a/src/components/Tech/Tech.css
+++ b/src/components/Tech/Tech.css
@@ -16,7 +16,7 @@
   color: rgba(255, 255, 255, 1);
 }
 .tech__text {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
