--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -7,7 +7,7 @@
   margin: 0 auto;
 }
 .techs__title {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 50px;
   font-weight: 400;
   line-height: 58px;
@@ -16,7 +16,7 @@
   text-align: center;
 }
 .techs__text {
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
