--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -5,6 +5,7 @@
   display: flex;
   border-bottom: 1px solid rgba(232, 232, 232, 1);
   font-size: 0;
+  /* flex-direction: column; */
 }
 .search-form__input {
   font-family: 'Inter', Arial, sans-serif;
@@ -16,6 +17,17 @@
   padding-bottom: 13px;
   outline: none;
   width: calc(100% - 34px);
+}
+.search-form__input-error {
+  font-family: 'Inter', Arial, sans-serif;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 12px;
+  text-align: left;
+  color: rgba(255, 48, 85, 1);
+  opacity: 0;
+  min-height: 16px;
+  transition: 0.3s;
 }
 .search-form__conntainer:has(.search-form__input:focus) {
   border-bottom: 1px solid rgba(52, 86, 243, 1);
