--- a/src/components/ProjectLink/ProjectLink.css
+++ b/src/components/ProjectLink/ProjectLink.css
@@ -1,11 +1,17 @@
 .portfolio__list-item {
   list-style: none;
   position: relative;
+  display: flex;
+  border-bottom: 1px solid rgba(232, 232, 232, 1);
 }
 .portfolio__list-item:not(:last-child) {
   margin-bottom: 20px;
 }
-.portfolio__list-link::after {
+.portfolio__list-icon {
+  display: block;
+  width: 40px;
+}
+.portfolio__list-icon::after {
   position: absolute;
   content: '';
   right: 0;
@@ -24,7 +30,7 @@
 }
 .portfolio__list-link {
   display: inline-flex;
-  border-bottom: 1px solid rgba(232, 232, 232, 1);
+
   padding-bottom: 20px;
   width: 100%;
   text-decoration: none;
@@ -34,13 +40,15 @@
   line-height: 50px;
   letter-spacing: -0.04em;
   color: rgba(0, 0, 0, 1);
+  position: relative;
+  padding-right: 5px;
 }
 .portfolio__list-link:hover {
   opacity: 0.7;
   color: rgba(43, 224, 128, 1);
   border-bottom: 1px solid rgba(43, 224, 128, 1);
 }
-.portfolio__list-link:hover::after {
+.portfolio__list-link:hover .portfolio__list-icon::after {
   background-image: url('../../images/arrow__project-link_green.svg');
 }
 @media screen and (max-width: 768px) {
@@ -48,7 +56,7 @@
     font-size: 28px;
     padding-bottom: 19px;
   }
-  .portfolio__list-link::after {
+  .portfolio__list-icon::after {
     width: 18px;
     height: 18px;
   }
@@ -58,7 +66,7 @@
     font-size: 18px;
     line-height: 28px;
   }
-  .portfolio__list-link::after {
+  .portfolio__list-icon::after {
     width: 14px;
     height: 14px;
   }
