--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -17,7 +17,7 @@
   line-height: 18px;
   word-wrap: break-word;
   grid-area: title;
-  padding: 18px 4px 18px 18px;
+  margin: 18px 4px 18px 18px;
 }
 .movies-card__time {
   font-family: 'Inter', Arial, sans-serif;
@@ -27,7 +27,7 @@
   text-align: right;
   color: rgba(160, 160, 160, 1);
   grid-area: time;
-  padding: 18px 18px 18px 4px;
+  margin: 18px 18px 18px 4px;
 }
 
 .movies-card__img {
