--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -46,7 +46,7 @@
   width: 100%;
   height: 100%;
   z-index: 10;
-  padding: 20px;
+  padding-top: 140px;
 }
 
 .preloader__container {
@@ -85,4 +85,14 @@
   z-index: 10;
   background: rgba(43, 224, 128, 1);
   animation: preloader-inside-red 1s ease-in-out infinite;
+}
+@media screen and (max-width: 896px) {
+  .preloader {
+    padding-top: 100px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .preloader {
+    padding-top: 70px;
+  }
 }
