--- a/src/components/SavedMovies/SavedMovies.css
+++ b/src/components/SavedMovies/SavedMovies.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 160px;
+  flex: 1;
 }
 @media screen and (max-width: 768px) {
   .saved-movies {
