--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -21,9 +21,30 @@
   border-radius: 5px;
   cursor: pointer;
 }
+.movies__not-found {
+  display: flex;
+  justify-content: center;
+  padding-top: 140px;
+  font-family: 'Inter', Arial, sans-serif;
+  font-size: 50px;
+  font-weight: 400;
+  line-height: 62px;
+  text-align: center;
+}
 .movies__button:hover {
   scale: 1.1;
   opacity: 0.7;
+}
+.movies__error-req {
+  display: flex;
+  justify-content: center;
+  padding-top: 140px;
+  font-family: 'Inter', Arial, sans-serif;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 38px;
+  color: rgba(255, 48, 85, 1);
+  text-align: center;
 }
 
 @media screen and (max-width: 425px) {
