--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -47,9 +47,14 @@
   cursor: pointer;
   width: 396px;
   padding: 13px 0 15px;
-  margin: 197px 0 16px;
+  margin: 20px 0 16px;
   color: rgba(255, 255, 255, 1);
   border-radius: 3px;
+}
+
+.login__button-submit_disable {
+  background-color: rgba(248, 248, 248, 1);
+  color: rgba(194, 194, 194, 1);
 }
 .login__text {
   font-family: 'Inter', Arial, sans-serif;
@@ -85,6 +90,23 @@
   opacity: 1;
   visibility: visible;
 }
+.login__form-error {
+  margin-top: 161px;
+  font-family: 'Inter', Arial, sans-serif;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 12px;
+  text-align: center;
+  color: rgba(255, 48, 85, 1);
+  opacity: 0;
+  visibility: hidden;
+  min-height: 16px;
+  transition: 0.3s;
+}
+.login__form-error_visible {
+  opacity: 1;
+  visibility: visible;
+}
 @media screen and (max-width: 425px) {
   .login {
     align-items: center;
@@ -92,9 +114,12 @@
   }
   .login__button-submit {
     width: 260px;
-    margin: 275px 0 16px;
+    /* margin: 275px 0 16px; */
     font-size: 12px;
     line-height: 15px;
+  }
+  .login__form-error {
+    margin-top: 239px;
   }
   .login__title {
     margin: 50px 0;
