--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -51,10 +51,16 @@
   color: rgba(255, 255, 255, 1);
   border-radius: 3px;
 }
-
+.login__button-submit:hover {
+  opacity: 0.7;
+}
 .login__button-submit_disable {
   background-color: rgba(248, 248, 248, 1);
   color: rgba(194, 194, 194, 1);
+}
+.login__button-submit_disable:hover {
+  opacity: 1;
+  cursor: auto;
 }
 .login__text {
   font-family: 'Inter', Arial, sans-serif;
@@ -83,7 +89,7 @@
   color: rgba(255, 48, 85, 1);
   opacity: 0;
   visibility: hidden;
-  min-height: 16px;
+  min-height: 24px;
   transition: 0.3s;
 }
 .login__input-error_visible {
