--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -55,9 +55,16 @@
   font-weight: 500;
   line-height: 17px;
 }
+.register__button-submit:hover {
+  opacity: 0.7;
+}
 .register__button-submit_disable {
   background-color: rgba(248, 248, 248, 1);
   color: rgba(194, 194, 194, 1);
+}
+.register__button-submit_disable:hover {
+  opacity: 1;
+  cursor: auto;
 }
 .register__text {
   font-family: 'Inter', Arial, sans-serif;
@@ -86,7 +93,7 @@
   color: rgba(255, 48, 85, 1);
   opacity: 0;
   visibility: hidden;
-  min-height: 16px;
+  min-height: 24px;
   transition: 0.3s;
 }
 .register__input-error_visible {
