--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -38,8 +38,10 @@
   .header__label {
     z-index: 11;
     display: flex;
+  }
+  .header__label:has(.header__checkbox:checked) {
     position: fixed;
-    top: 18px;
+    top: 25px;
     right: 30px;
   }
   .header__label:has(.header__checkbox:checked) ~ .header__nav_enter {
