--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -30,10 +30,16 @@
   grid-area: time;
   margin: 18px 18px 18px 4px;
 }
-.movies-card__img {
+.movies-card__link {
   grid-area: img;
+}
+.movies-card__link-img {
   width: 360px;
   height: 200px;
+}
+.movies-card__link:hover {
+  opacity: 0.7;
+  cursor: pointer;
 }
 .movies-card__button {
   grid-area: button;
@@ -62,20 +68,19 @@
   background-repeat: no-repeat;
   background-color: rgba(255, 48, 85, 1);
 }
+.movies-card__button-saved:hover {
+  background-image: url(../../images/movies__delete__icon.svg);
+  background-color: rgba(249, 249, 249, 1);
+}
 .movies-card__button:hover {
   opacity: 0.7;
   scale: 1.1;
-}
-.movies-card__button-saved:hover {
-  opacity: 1;
-  scale: 1;
-  cursor: auto;
 }
 @media screen and (max-width: 896px) {
   .movies-card {
     max-width: 342px;
   }
-  .movies-card__img {
+  .movies-card__link-img {
     width: 342px;
     height: 190px;
   }
@@ -84,17 +89,17 @@
   .movies-card {
     max-width: 300px;
   }
-  .movies-card__img {
+  .movies-card__link-img {
     width: 300px;
     height: 168px;
   }
   .movies-card__title {
     font-size: 12px;
-    padding: 14px 4px 14px 18px;
+    margin: 14px 4px 14px 18px;
   }
   .movies-card__time {
     font-size: 10px;
-    padding: 14px 14px 14px 4px;
+    margin: 14px 14px 14px 4px;
   }
   .movies-card__button {
     margin: 14px auto;
