--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -25,8 +25,13 @@
   text-align: left;
   color: rgba(255, 48, 85, 1);
   opacity: 0;
+  visibility: hidden;
   min-height: 16px;
   transition: 0.3s;
+}
+.search-form__input-error_visable {
+  opacity: 1;
+  visibility: visible;
 }
 .search-form__conntainer:has(.search-form__input:focus) {
   border-bottom: 1px solid rgba(52, 86, 243, 1);
@@ -47,6 +52,10 @@
 
 .search-form__button-submit:hover {
   opacity: 0.7;
+}
+.search-form__button-submit_disable:hover {
+  opacity: 1;
+  cursor: auto;
 }
 
 @media screen and (max-width: 768px) {
